--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,18 +84,16 @@
         </div>
         <a class="left carousel-control" href="#focusslide" role="button" data-slide="prev" rel="nofollow"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">上一个</span> </a> <a class="right carousel-control" href="#focusslide" role="button" data-slide="next" rel="nofollow"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">下一个</span> </a> </div>
       <article class="excerpt-minic excerpt-minic-index">
-            <h2><span class="red">【推荐】</span><a target="_blank" href="http://www.muzhuangnet.com/show/269.html" title="用DTcms做一个独立博客网站（响应式模板）" >用DTcms做一个独立博客网站（响应式模板）</a>
+            <h2><span class="red">【推荐】</span><a target="_blank" href="http://www.muzhuangnet.com/show/269.html" title="用心做好每一件工作" >用心做好每一件工作</a>
             </h2>
-            <p class="note">用DTcms做一个独立博客网站（响应式模板），采用DTcms V4.0正式版（MSSQL）。开发环境：SQL2008R2+VS2010。DTcms V4.0正式版功能修复和优化：1、favicon.ico图标后台上传。（解决要换图标时要连FTP或者开服务器的麻烦）</p>
+            <p class="note">本站发布有各种热门兼职,欢迎大家积极报名,公司保障每个人的工资!同时也欢迎发布需求!</p>
         </article>
       <div class="title">
         <h3>最新发布</h3>
         <div class="more">                
-                <a href="http://www.muzhuangnet.com/list/mznetblog/" title="MZ-NetBlog主题" >MZ-NetBlog主题</a>                
-                <a href="http://www.muzhuangnet.com/list/code/" title="IT技术笔记" >IT技术笔记</a>                
-                <a href="http://www.muzhuangnet.com/list/share/" title="源码分享" >源码分享</a>                
-                <a href="http://www.muzhuangnet.com/list/money/" title="靠谱网赚" >靠谱网赚</a>                
-                <a href="http://www.muzhuangnet.com/list/news/" title="资讯分享" >资讯分享</a>                
+                <a href="http://www.muzhuangnet.com/list/mznetblog/" title="MZ-NetBlog主题" >热门兼职</a>                
+               	<a href="http://www.muzhuangnet.com/list/code/" title="IT技术笔记" >人才自荐</a>                
+                <!-- <a href="http://www.muzhuangnet.com/list/share/" title="源码分享" >源码分享</a> -->                
             </div>
       </div>
       <article class="excerpt excerpt-1" style="">
@@ -246,12 +244,12 @@
           </ul>
      </div>
      <div class="widget widget_sentence">    
-        <a href="http://web.muzhuangnet.com/" target="_blank" rel="nofollow" title="专业网站建设" >
+        <a href="http://www.124lk.com/" target="_blank" rel="nofollow" title="专业网站建设" >
         <img style="width: 100%" src="http://www.muzhuangnet.com/upload/201610/24/201610241224221511.jpg" alt="专业网站建设" ></a>    
      </div>
      <div class="widget widget_sentence">    
         <a href="http://www.muzhuangnet.com/show/269.html" target="_blank" rel="nofollow" title="MZ-NetBlog主题" >
-        <img style="width: 100%" src="images/ad.jpg" alt="MZ-NetBlog主题" ></a>    
+        <img style="width: 100%" src="images/lk1.jpg" alt="MZ-NetBlog主题" ></a>    
      </div>
     <div class="widget widget_sentence">
       <h3>友情链接</h3>
@@ -263,7 +261,7 @@
 </section>
     <footer class="footer">
   <div class="container">
-    <p>本站[<a href="http://www.muzhuangnet.com/" >新里程</a>]的部分内容来源于网络，若侵犯到您的利益，请联系站长删除！谢谢！Powered By [<a href="http://www.dtcms.net/" target="_blank" rel="nofollow" >DTcms</a>] Version 4.0 &nbsp;<a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow" >闽ICP备00000000号-1</a> &nbsp; <a href="http://www.muzhuangnet.com/sitemap.xml" target="_blank" class="sitemap" >网站地图</a></p>
+    <p>本站[<a href="http://www.124lk.com/" >新里程</a>]的部分内容来源于网络，若侵犯到您的利益，请联系站长删除！谢谢！Powered By [<a href="http://www.dtcms.net/" target="_blank" rel="nofollow" >DTcms</a>] Version 4.0 &nbsp;<a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow" >豫ICP备16041563号</a> &nbsp; <a href="http://www.muzhuangnet.com/sitemap.xml" target="_blank" class="sitemap" >网站地图</a></p>
   </div>
   <div id="gotop"><a class="gotop"></a></div>
 </footer>
